// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConditionalFilter / ValueProvider / TokenArray > creates filter container with removing constrain if there is no depepdent rows 1`] = `
TokenArray [
  FilterElement {
    "attributeLoading": false,
    "availableAttributesList": [],
    "condition": Condition {
      "loading": false,
      "options": ConditionOptions [
        {
          "label": "is",
          "type": "select",
          "value": "input-5",
        },
      ],
      "selected": ConditionSelected {
        "conditionValue": {
          "label": "is",
          "type": "select",
          "value": "input-5",
        },
        "loading": false,
        "options": [],
        "value": {
          "label": "Channel PLN",
          "slug": "channel-pln",
          "value": "channel-pln",
        },
      },
    },
    "constraint": undefined,
    "loading": false,
    "selectedAttribute": null,
    "value": ExpressionValue {
      "entityType": null,
      "label": "Channel",
      "type": "channel",
      "value": "channel",
    },
  },
]
`;

exports[`ConditionalFilter / ValueProvider / TokenArray > should create filter container from a given response 1`] = `
TokenArray [
  FilterElement {
    "attributeLoading": false,
    "availableAttributesList": [],
    "condition": Condition {
      "loading": false,
      "options": ConditionOptions [
        {
          "label": "is",
          "type": "number",
          "value": "input-1",
        },
        {
          "label": "lower",
          "type": "number",
          "value": "input-2",
        },
        {
          "label": "greater",
          "type": "number",
          "value": "input-3",
        },
        {
          "label": "between",
          "type": "number.range",
          "value": "input-4",
        },
      ],
      "selected": ConditionSelected {
        "conditionValue": {
          "label": "is",
          "type": "number",
          "value": "input-1",
        },
        "loading": false,
        "options": [],
        "value": "123",
      },
    },
    "constraint": undefined,
    "loading": false,
    "selectedAttribute": null,
    "value": ExpressionValue {
      "entityType": null,
      "label": "Price",
      "type": "price",
      "value": "price",
    },
  },
  "AND",
  FilterElement {
    "attributeLoading": false,
    "availableAttributesList": [],
    "condition": Condition {
      "loading": false,
      "options": ConditionOptions [
        {
          "label": "is",
          "type": "select",
          "value": "input-5",
        },
      ],
      "selected": ConditionSelected {
        "conditionValue": {
          "label": "is",
          "type": "select",
          "value": "input-5",
        },
        "loading": false,
        "options": [],
        "value": {
          "label": "Channel PLN",
          "slug": "channel-pln",
          "value": "channel-pln",
        },
      },
    },
    "constraint": Constraint {
      "dependsOn": [
        "price",
        "isVisibleInListing",
        "isAvailable",
        "isPublished",
        "published",
      ],
      "disabled": [
        "left",
        "condition",
      ],
      "isGlobal": false,
      "removable": false,
    },
    "loading": false,
    "selectedAttribute": null,
    "value": ExpressionValue {
      "entityType": null,
      "label": "Channel",
      "type": "channel",
      "value": "channel",
    },
  },
]
`;
